--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+* {
+    box-sizing: boarder-box;
+}
 
-font-family: 'Nunito', sans-serif;
+body{
+    font-family: 'Nunito', sans-serif;
+    color: #131111
+}
+
+
 font-family: 'Wix Madefor Display', sans-serif;
