--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,15 @@ html {
     box-sizing: inherit;
 }
 
-body{
+.body {
     font-family: 'Nunito', sans-serif;
     color: #131111;
     line-height: 1.5;
 }
 
-
+.wrapper {
+    max-width: 1200px;
+    margin: center;
+    background-color: blueviolet;
+}
 font-family: 'Wix Madefor Display', sans-serif;
