--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,14 @@ html {
 
 .wrapper {
     max-width: 1200px;
-    margin: center;
+    margin: auto;
     background-color: blueviolet;
     align-content: center;
 }
 
-.header {
+header {
     background-color: #000;
-    color: #fff;
+    color:#DEC9E9;
 }
 
 font-family: 'Wix Madefor Display', sans-serif;
