--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,14 @@ html {
 
 body {
     font-family: 'Nunito', sans-serif;
-    color: #131111;
+    color: #fff;
     line-height: 1.5;
 }
 
 .wrapper {
     max-width: 1200px;
     margin: auto;
-    background-color: #7251B5;
+    background-color: #6647A6;
     align-content: center;
 }
 
@@ -23,5 +23,12 @@ header {
     background-color: #000;
     color:#DEC9E9;
 }
+
+footer {
+    background-color: #000;
+    color: #fff;
+}
+
+
 
 font-family: 'Wix Madefor Display', sans-serif;
